--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,23 @@
-title: GBICi5-Python-1-Colourful-Creations
-hero_image: images/banner.png
-description: GBICi5-Python-1-Colourful-Creations description
-version: 4
-listed: false
+hero_image: images/colourful-creations.png
+theme: yellow
+duration: 2
+listed: true
+ingredient: false
 copyedit: false
-last_tested: "2019-08-21"
-steps:
-  - title: Introduction
-  - title: Step title
-  - title: What next?
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
+title: Colourful Creations
+description: Create your own custom colours, and use them to create a colourful poster.
+original_url: https://codeclubprojects.org/en-GB/python/colourful-creations
+interests: art
+technologies: python
+site_areas: projects
+hardware: ''
+software: python
+version: 3
+last_tested: 2017-01-01
+steps: 
+- title: Introduction
+- title: Using hex colour codes
+- title: A Colour Dictionary
+- title: 'Challenge: More colours!'
+- title: 'Challenge: Create a poster'
